--- a/index.html
+++ b/index.html
@@ -127,65 +127,30 @@
 					<div class="header__area-menubar">
 						<div class="header__area-menubar-left one">
 							<div class="header__area-menubar-left-logo">
-								<a href="index-2.html"><img class="dark-n" src="assets/img/logo-1.png" alt="logo"><img class="light-n" src="assets/img/logo-2.png" alt="logo"></a>
+								<a href="index.html">
+									<img class="dark-n" src="assets/img/logo-1.png" alt="logo">
+									<img class="light-n" src="assets/img/logo-2.png" alt="logo">
+								</a>
 							</div>
 						</div>
 						<div class="header__area-menubar-center">
 							<div class="header__area-menubar-center-menu">
 								<ul id="mobilemenu">
-									<li class="menu-item-has-children"><a href="index.html">Home</a>
-										<!-- <ul class="sub-menu">
-											<li><a href="index-2.html">Home 01</a></li>
-											<li><a href="index-two.html">Home 02</a></li>
-											<li><a href="index-three.html">Home 03</a></li>
-										</ul>
-									</li> -->
-									<li class="menu-item-has-children"><a href="about.html">About Us</a>
-									<li class="menu-item-has-children"><a href="http://127.0.0.1:5500/services.html">Services</a>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="about.html">About Us</a></li>
+									<li class="menu-item-has-children">
+										<a href="services.html">Services</a>
 										<ul class="sub-menu">
-											<!-- <li><a href="about.html">About Us</a></li>
-											<li><a href="history.html">Company History</a></li> -->
-											<li class="menu-item-has-children"><a href="services.html">Services</a>
-												<ul class="sub-menu">
-													<!-- <li><a href="services.html">Service 01</a></li> -->
-													<li><a href="services-details.html">Services Details</a></li>
-												</ul>
-											</li>
-											<!-- <li><a href="testimonial.html">Testimonials</a></li>
-											<li><a href="pricing.html">Price Plans</a></li>
-											<li><a href="faq.html">FAQ's</a></li>
-											<li><a href="team.html">Team</a></li>
-											<li><a href="request-quote.html">Request Quote</a></li>
-											<li><a href="404-error.html">404 Page</a></li> -->
+											<li><a href="services-details.html">Service Details</a></li>
 										</ul>
 									</li>
-									<!-- <li class="menu-item-has-children"><a href="#">Portfolio</a>
-										<ul class="sub-menu">
-											<li><a href="gallery.html">Filterable Gallery</a></li>
-											<li class="menu-item-has-children"><a href="#">Portfolio Grid</a>
-												<ul class="sub-menu">
-													<li><a href="portfolio-two.html">2 Columns</a></li>
-													<li><a href="portfolio-three.html">3 Columns</a></li>
-													<li><a href="portfolio-four.html">4 Columns</a></li>
-												</ul> -->
-											<!-- </li>
-											<li><a href="portfolio-details.html">Portfolio Details</a></li>
-										</ul>
-									</li>
-									<li class="menu-item-has-children"><a href="#">Blog</a>
-										<ul class="sub-menu">
-											<li><a href="blog.html">Blog Grid</a></li>
-											<li><a href="blog-standard.html">Blog Standard</a></li>
-											<li><a href="blog-details.html">Blog Details</a></li>
-										</ul>
-									</li> -->
 									<li><a href="contact.html">Contact Us</a></li>
 								</ul>
 							</div>
 						</div>
 						<div class="header__area-menubar-right">
 							<div class="header__area-menubar-right-search xl-display-n">
-								<div class="search">	
+								<div class="search">
 									<span class="header__area-menubar-right-search-icon open"><i class="flaticon-search-1"></i></span>
 								</div>
 							</div>
@@ -207,6 +172,7 @@
 			</div>
 		</div>
 	</div>
+	
 	<!-- Header Area End -->
 	<!-- Banner Area Start -->
 	<div class="banner__one">
