--- a/services-details.html
+++ b/services-details.html
@@ -81,9 +81,14 @@
 	<!-- Mobile Menu Start -->
 	<div class="menu__bar-popup">
 		<div class="menu__bar-popup-top">
-			<div class="logo"><a href="index-2.html"><img src="assets/img/logo-2.png" alt="logo-image"></a></div>			
-			<div class="close"><i class="fal fa-times"></i></div>
-
+			<div class="logo">
+				<a href="index.html">
+					<img src="assets/img/logo-2.png" alt="logo-image">
+				</a>
+			</div>
+			<div class="close">
+				<i class="fal fa-times"></i>
+			</div>
 		</div>
 		<div class="vertical-menu">
 			<div class="vertical_menu">
